# nvim-web

./: .bazelrc  .dockerignore  .editorconfig  .gitignore  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Enhancements.md  LICENSE  Makefile  Neovim issue 35567 solution.md  README.md  WORKSPACE  clippy.toml  config.example.toml  config.js  docker-compose.yml  install.sh  justfile  nvim-web  nvim-web.rb  package-lock.json  package.json  playwright.config.ts  run.sh  rustfmt.toml
.github/: FUNDING.yml  SPONSOR.yml
.github/workflows/: ci.yml
crates/host/: BUILD.bazel  Cargo.toml
crates/host/src/: api.rs  auth.rs  backend_swap.rs  collaboration.rs  config.rs  context.rs  embedded.rs  lib.rs  main.rs  native.rs  pipe.rs  project.rs  search.rs  session.rs  settings.rs  sharing.rs  terminal.rs  trace.rs  tunnel.rs  vfs_handlers.rs  ws.rs
crates/host/src/crdt/: buffer.rs  mod.rs  sync.rs
crates/host/src/k8s/: mod.rs  pod_manager.rs  router.rs  session_pod.rs
crates/host/src/oidc/: client.rs  config.rs  middleware.rs  mod.rs  routes.rs
crates/host/src/transport/: mod.rs  websocket.rs  webtransport.rs
crates/host/src/vfs/: local.rs
crates/host/src/ws/: commands.rs  connection.rs  mod.rs  protocol.rs  rate_limit.rs
crates/host/tests/: auth_integration.rs  security_origin.rs  session_reconnect_test.rs  vfs_backend_swappability.rs  vfs_integration.rs  ws_reconnection.rs
crates/host/tests/common/: harness.rs  mock_browser.rs
crates/nvim-wasm-shim/: Cargo.toml
crates/nvim-wasm-shim/src/: fs.rs  lib.rs  net.rs
crates/protocol/: BUILD.bazel  Cargo.toml
crates/protocol/src/: crdt.rs  lib.rs  messages.rs  rpc.rs
crates/ui/: BUILD.bazel  Cargo.toml  build.sh  index.html  manifest.json  package-lock.json  package.json  styles.css  sw.js  tsconfig.json  worker.js
crates/ui/fs/: fs_driver.js  opfs.js  session_storage.js
crates/ui/snippets/nvim-web-ui-fe586f50cc34cf41/fs/: opfs.js
crates/ui/src/: crdt.rs  dom.rs  events.rs  grid.rs  handler.rs  highlight.rs  input.rs  input_queue.rs  lib.rs  network.rs  opfs.rs  render.rs  renderer.rs  session.rs  shader.wgsl  telemetry.ts  worker.rs
crates/ui/src/components/: mod.rs
crates/ui/src/components/vfx/: cursor.rs  mod.rs  particles.rs
crates/ui/src/drawer/: help.rs  mod.rs  sessions.rs  settings.rs
crates/ui/src/fs/: opfs.rs
crates/ui/ts/: chat.ts  fs_driver.ts  opfs.ts  p2p.ts  prediction.ts  session_storage.ts  sw.ts  syntax.ts  types.d.ts  worker.ts
crates/vfs/: BUILD.bazel  Cargo.toml
crates/vfs/src/: async_ops.rs  backend.rs  browser.rs  git.rs  github.rs  http.rs  lib.rs  local.rs  manager.rs  memory.rs  overlay.rs  ssh.rs
crates/vfs/tests/: ssh_integration.rs  windows_path_validation.rs
docs/: QUICKSTART.md  architecture.md  auth-protocol.md  authentication.md  collaboration.md  kubernetes.md  protocol.md  reconnection_memoir.md  testing.md  webtransport.md
e2e/: smoke.spec.ts  terminal.spec.ts
extension/: README.md  background.js  manifest.json  popup.html  popup.js
host/: Cargo.toml  clippy.toml
host/src/: api.rs  collaboration.rs  connection_manager.rs  debug.rs  embedded.rs  git.rs  lib.rs  main.rs  nvim.rs  project.rs  rpc.rs  rpc_buffers.rs  rpc_sync.rs  security.rs  session.rs  settings.rs  vfs_handlers.rs  ws.rs
host/src/vfs/: backend.rs  browser.rs  local.rs  manager.rs  mod.rs  ssh.rs
host/tests/: security_origin.rs  session_reconnect_test.rs  vfs_backend_swappability.rs  vfs_integration.rs  vfs_localfs_unit.rs  vfs_long_session.rs
host/tests/common/: harness.rs  mock_browser.rs  mod.rs
k8s/: ingress.yaml  rbac.yaml  router-deployment.yaml  router-service.yaml  session-pod-template.yaml
packaging/: README.md
packaging/arch/: PKGBUILD
packaging/deb/: build.sh
packaging/flatpak/: com.github.kj114022.nvim-web.yaml
packaging/homebrew/: homebrew.rb
packaging/nix/: flake.nix
packaging/rpm/: nvim-web.spec
packaging/snap/: snapcraft.yaml
packaging/windows/: nvim-web.json  winget.yaml
plugin/: README.md
plugin/lua/nvim-web/: init.lua  pipe.lua
plugin/plugin/: nvim-web.lua
scripts/: build.sh  extract-protocol.sh  extract-vfs.sh  install-native-manifest.sh  migrate-to-workspace.sh  refactor-ui-part1.sh  refactor-ui-part2.sh  refactor-ui-part3.sh  refactor-ui-part4.sh
ui/: Cargo.toml  build.sh  debug.html  index.html  manifest.json  nvim_web_ui.js  patch-firefox.sh  sw.js
ui/fs/: opfs.ts
ui/src/: grid.rs  input.rs  lib.rs  protocol.rs  renderer.rs
