# Root BUILD.bazel for nvim-web
# Packages the main binary and exports workspace-level targets

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

# ----------------------------------------------------------------------------
# Main binary target
# ----------------------------------------------------------------------------

rust_binary(
    name = "nvim-web",
    srcs = ["crates/host/src/main.rs"],
    deps = [
        "//crates/host:nvim_web_host",
    ],
)

# ----------------------------------------------------------------------------
# Alias for convenience
# ----------------------------------------------------------------------------

alias(
    name = "host",
    actual = "//crates/host:nvim_web_host",
)

alias(
    name = "ui",
    actual = "//crates/ui:nvim_web_ui",
)

alias(
    name = "vfs",
    actual = "//crates/vfs:nvim_web_vfs",
)

# ----------------------------------------------------------------------------
# Package targets
# ----------------------------------------------------------------------------

pkg_tar(
    name = "nvim-web-tar",
    srcs = [
        ":nvim-web",
        "//crates/ui:wasm_pkg",
    ],
    extension = "tar.gz",
    strip_prefix = ".",
)

# ----------------------------------------------------------------------------
# Test all crates
# ----------------------------------------------------------------------------

test_suite(
    name = "all_tests",
    tests = [
        "//crates/host:tests",
        "//crates/vfs:tests",
        "//crates/protocol:tests",
    ],
)
