[workspace]
members = [
    "crates/host",
    "crates/ui",
    "crates/vfs",
    "crates/protocol",
    "crates/nvim-wasm-shim",
]
resolver = "2"

[workspace.package]
version = "0.9.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/tourist/nvim-web"
homepage = "https://github.com/tourist/nvim-web"
authors = ["Tourist <tourist@example.com>"]

[workspace.dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async/Network
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
http = "1.0"
bytes = "1.5"

# Websocket
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21", features = ["rustls"] }

# Serialization/MsgPack
rmpv = "1.3"
rmp-serde = "1.3"

# System/Utils
dirs = "5.0"
rand = "0.8"
mime_guess = "2.0"

# WASM/Web
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Headers", "Request", "Response", "Window", "Document", "Element", "HtmlElement", "Node", "DomTokenList", "HtmlCanvasElement", "CanvasRenderingContext2d", "Performance", "console", "MessageEvent", "WebSocket", "BinaryType", "CloseEvent", "ErrorEvent", "Blob", "BlobPropertyBag", "Url", "Location", "History", "KeyboardEvent", "MouseEvent", "WheelEvent", "DragEvent", "DataTransfer", "FileList", "File", "FileReader", "ProgressEvent", "HtmlInputElement", "Storage"] }
js-sys = "0.3"

wasm-bindgen-futures = "0.4"
