[package]
name = "nvim-web-host"
version = "0.1.0"
edition = "2021"
description = "Neovim in the Browser - WebSocket host for browser-based Neovim"
license = "MIT"
repository = "https://github.com/your-username/nvim-web"
homepage = "https://github.com/your-username/nvim-web"
documentation = "https://github.com/your-username/nvim-web#readme"
readme = "../README.md"
keywords = ["neovim", "browser", "websocket", "editor", "vim"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
rmpv = "1"
rmp-serde = "1"
lazy_static = "1.4"
ssh2 = "0.9"
dirs = "5"

# Async runtime and nvim-rs
nvim-rs = { version = "0.9", features = ["use_tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
async-trait = "0.1"

# Keep tungstenite for now (will remove after migration)
tungstenite = "0.24"
http = "1.4.0"

[dev-dependencies]
tempfile = "3"

[lib]
name = "nvim_web_host"
path = "src/lib.rs"
