[package]
name = "nvim-web-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
rmpv = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "ClipboardEvent",
  "CloseEvent",
  "CssStyleDeclaration",
  "DataTransfer",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "History",
  "HtmlElement",
  "HtmlCanvasElement",
  "Location",
  "Storage",
  "Window",
  "WebSocket",
  "MessageEvent",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "KeyboardEvent",
  "FocusEvent",
  "MouseEvent",
  "WheelEvent",
  "TouchEvent",
  "Touch",
  "TouchList",
  "EventTarget",
  "console",
  "TextMetrics",
  "ResizeObserver",
  "ResizeObserverEntry",
  "DomRectReadOnly",
  "Navigator",
  "Clipboard",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
]



