# BUILD.bazel for nvim-web-host crate
# Main server binary with all integrations

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crate_index//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "nvim_web_host",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "nvim_web_host",
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//crates/vfs:nvim_web_vfs",
        "//crates/protocol:nvim_web_protocol",
    ],
)

rust_test(
    name = "tests",
    crate = ":nvim_web_host",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
