[package]
name = "nvim-web-host"
description = "Neovim in the Browser - WebSocket host for browser-based Neovim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["neovim", "browser", "websocket", "editor", "vim"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
rmpv = "=1.3.0"
rmp-serde = "=1.3.0"
rmp = "=0.8.14"
serde_json.workspace = true
lazy_static.workspace = true
dirs.workspace = true
rand.workspace = true
mime_guess.workspace = true

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
axum.workspace = true
tower-http.workspace = true
tower = { version = "0.4", features = ["util"] }
http.workspace = true
bytes.workspace = true

# Pin transient dependencies to avoid edition2024 requirement in older rustc
base64ct = "=1.6.0"
home = "=0.5.9"
globset = "=0.4.15"

# Crate-specific dependencies
ssh2 = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
nvim-rs = { version = "0.9", features = ["use_tokio"] }
rust-embed = { version = "8", features = ["include-exclude"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
nvim-web-protocol = { path = "../protocol" }
nvim-web-vfs = { path = "../vfs" }
qr2term = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2"
uuid = { version = "1", features = ["v4"] }
regex = "1.12.2"
urlencoding = "2.1.3"
percent-encoding = "2.3"
tokio-util = { version = "0.7.17", features = ["compat"] }
portable-pty = "0.8"
once_cell = "1.19"

# Authentication (per Neovim issue #4443)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# TLS
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Rate Limiting
governor = "0.6"
nonzero_ext = "0.3"

# WebTransport / QUIC (Phase 1: Future Features)
quinn = "0.11"
wtransport = "0.6"
rcgen = "0.13"  # For self-signed certs in dev
pem = "3"       # PEM certificate parsing

# CRDTs for Real-Time Collaboration (Phase 2: Future Features)
yrs = "0.21"           # y-crdt Rust implementation
y-sync = "0.4"         # Sync protocol for y-crdt

# OIDC/BeyondCorp Authentication (Phase 3: Future Features)
openidconnect = "4.0"  # OpenID Connect client
cookie = "0.18"        # Session cookies
base64 = "0.22"        # Cookie value encoding
oauth2 = "5"           # OAuth2 flows

# Kubernetes Pod-Per-Session (Phase 4: Future Features)
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
chrono = "0.4"          # Timestamp handling

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
serial_test = "3"

[features]
default = []
# Future: ssh = ["dep:ssh2"]
# Future: tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]

[lib]
name = "nvim_web_host"
path = "src/lib.rs"

[[bin]]
name = "nvim-web-host"
path = "src/main.rs"

[[bin]]
name = "nvim-web"
path = "src/bin/cli.rs"


