[package]
name = "nvim-wasm-shim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "System call shim for running Neovim core in WASM"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bitflags = "2.4"
libc = "0.2"
thiserror = "1.0"
tracing = "0.1"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
] }
