# BUILD.bazel for nvim-web-protocol crate
# Shared types and protocol definitions

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crate_index//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "nvim_web_protocol",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "nvim_web_protocol",
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ),
)

rust_test(
    name = "tests",
    crate = ":nvim_web_protocol",
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
