[package]
name = "nvim-web-ui"
description = "Neovim in the Browser - WASM UI frontend"
version = "0.9.9"
edition = "2021"
license = "MIT"
authors = ["Tourist"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Workspace dependencies
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
rmpv.workspace = true
getrandom = { version = "0.2", features = ["js"] }
nvim-web-protocol = { path = "../protocol" }
wgpu = { version = "23", features = ["webgl"] }
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
console_error_panic_hook = "0.1"
base64ct = "=1.6.0" # Pin to avoid edition2024 requirement
yrs = { version = "0.21" }


[dependencies.web-sys]
workspace = true
features = [
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "ClipboardEvent",
    "CloseEvent",
    "CssStyleDeclaration",
    "DataTransfer",
    "Document",
    "DomRect",
    "Element",
    "Event",
    "History",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "Storage",
    "Window",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "KeyboardEvent",
    "FocusEvent",
    "MouseEvent",
    "WheelEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "EventTarget",
    "console",
    "TextMetrics",
    "ResizeObserver",
    "Location",
    "Navigator",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "ResizeObserverEntry",
    "DomRectReadOnly",
    "Navigator",
    "Clipboard",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "DomTokenList",
    "CustomEvent",
    "CustomEventInit",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "DedicatedWorkerGlobalScope",
    "ImageData",
    "Performance",
    "DragEvent",
    "FileReader",
    "FileList",
    "File",
    "FontFace",
    "FontFaceSet",
    "FontFaceLoadStatus",
    "StorageManager",
    "FileSystemHandle",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemCreateWritableOptions",
]


