[package]
name = "nvim-web-vfs"
description = "Virtual Filesystem layer for nvim-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
ssh-test = []  # Enable SSH integration tests (requires sshd server)

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
dirs.workspace = true
ssh2 = "0.9"
rmpv.workspace = true
lazy_static.workspace = true
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
secrecy = { version = "0.8", features = ["serde"] } 

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
